Support create/drop catalog and metalake on Trino